# the-architect

./: .env.example  .gitignore  AGENTS.md  ARCHITECT_old.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPATIBILITY.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  architect_eval_PROGRESS.md  architect_eval_version.py  coverage.json  coverage_plan.md  cycle-research.md  more_things.md  pyproject.toml  version.py
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
documentation/: ARCHITECTURE.md  Best Practices.md  CONCEPTS.md  How to Read SUCCESS.md  More Things About The Architect.md  PRACTICES.md  The Architect Project.md
tests/: __init__.py  conftest.py  test_architect_md.py  test_baseline.py  test_circuit.py  test_claude_code_provider.py  test_cli.py  test_cli_comprehensive.py  test_cli_extra.py  test_cli_helpers.py  test_codex_cli_provider.py  test_config.py  test_context.py  test_costs_tab.py  test_dashboard.py  test_dry_run.py  test_dummy.py  test_estimate_cost.py  test_exceptions.py  test_feedback.py  test_fileutil.py  test_free_models.py  test_gemini_cli_provider.py  test_integration.py  test_intelligence.py  test_kill_integration.py  test_monitor.py  test_notifications.py  test_opencode_config.py  test_opencode_provider.py  test_parallel_execution_integration.py  test_parallel_scheduler.py  test_pause_menu.py  test_planner.py  test_pre_run_tabbed.py  test_preset.py  test_progress.py  test_project_health.py  test_project_intelligence.py  test_provider.py  (+42 more)
the_architect/: __init__.py  cli.py  config.py  exceptions.py  version.py
the_architect/core/: __init__.py  architect_md.py  baseline.py  circuit.py  claude_code_provider.py  codex_cli_provider.py  context.py  dashboard.py  estimate_cost.py  feedback.py  fileutil.py  free_models.py  gemini_cli_provider.py  intelligence.py  monitor_state.py  notifications.py  opencode_config.py  opencode_provider.py  parallel_scheduler.py  planner.py  presets.py  progress.py  project_health.py  project_intelligence.py  provider.py  provider_health.py  provider_setup.py  retrospective.py  rollback.py  runner.py  self_update.py  structure.py  success.py  tasks.py  templates.py  tmux.py  token_ledger.py  workspace_context.py
the_architect/resources/: __init__.py  opencode_template.json
the_architect/resources/prompts/: architect.md  execution-protocol.md  execution.md  intelligence.md  reviewer.md
the_architect/tui/: __init__.py  app.py  renderer.py  runner.py  session.py  terminal.py  widgets.py
the_architect/tui/screens/: __init__.py  circuit_screen.py  config.py  diff_screen.py  (+15 more)
