[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "the-architect"
version = "1.0.0"
description = "An autonomous development lifecycle layer for agentic AI coding tools"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [
    { name = "Netanel Eliav", email = "inetanel@me.com" }
]
maintainers = [
    { name = "Netanel Eliav", email = "inetanel@me.com" }
]
keywords = [
    "ai", "autonomous", "agentic", "coding-agent", "orchestration",
    "developer-tools", "automation", "llm", "cli", "opencode", "claude"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Utilities",
]
requires-python = ">=3.11"

# tomli is intentionally absent — tomllib is built-in from Python 3.11+
dependencies = [
    "questionary>=2.0.0",
    "loguru>=0.7.0",
    "rich>=13.0.0",
    "click>=8.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "mypy>=1.0",
    "ruff>=0.4",
]

[project.urls]
Homepage      = "https://inetanel.com/projects/the-architect"
Repository    = "https://github.com/inetanel/the-architect"
Documentation = "https://github.com/inetanel/the-architect#readme"
"Bug Tracker" = "https://github.com/inetanel/the-architect/issues"
Changelog     = "https://github.com/inetanel/the-architect/blob/main/CHANGELOG.md"

[project.scripts]
architect = "the_architect.cli:main"

# Hatch picks the version from [project].version above. No dynamic
# version resolver is configured — `the_architect/version.py` reads
# SemVer from installed metadata at runtime.

[tool.hatch.build.targets.wheel]
packages = ["the_architect"]

[tool.hatch.build.targets.sdist]
include = [
    "the_architect/",
    "LICENSE",
    "NOTICE",
    "README.md",
    "CHANGELOG.md",
    "pyproject.toml",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
